# scatterbrain

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  Makefile  README.md  RELEASE.md
.cursor/: mcp.json
CLAUDE/: conventions.md  rust.md
docs/: CLI-REFERENCE.md  EXAMPLES.md  MCP-GUIDE.md  WEB-UI.md
examples/: abstraction_heuristics.md  abstraction_levels.md  abstraction_prompts.md
src/: cli.rs  guide.rs  levels.rs  lib.rs  models.rs
src/api/: client.rs  mcp.rs  mod.rs  server.rs
src/api/client/: core.rs  http.rs  mod.rs  trait_def.rs
tests/: task_level_tests.rs
