[package]
name = "scatterbrain"
version = "0.1.0"
edition = "2021"
default-run = "scatterbrain"
repository = "https://github.com/owen-d/scatterbrain"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
axum = "0.7.5"
tower-http = { version = "0.5", features = ["cors", "trace"] }
tokio = { version = "1.37.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
reqwest = { version = "0.12.4", features = ["json"] }
thiserror = "1.0.61"
clap = { version = "4.5.4", features = ["derive", "env"] }
clap_complete = "4.5.1"
futures = "0.3"
chrono = { version = "0.4.38", features = ["serde"] }
rand = { version = "0.8.5", features = ["std_rng"] }
lazy_static = "1.4.0"
async-trait = "0.1"

# For CLI output coloring
colored = "2.1"
html-escape = "0.2"
rmcp = { git = "https://github.com/modelcontextprotocol/rust-sdk", branch = "main", features = [
  "transport-io",
  "server",
] }
rmcp-macros = { git = "https://github.com/modelcontextprotocol/rust-sdk", branch = "main" }

# The library portion of the crate
[lib]
name = "scatterbrain"
path = "src/lib.rs"

# The binary portion of the crate
[[bin]]
name = "scatterbrain"
path = "src/bin/main.rs"

[dev-dependencies]
pretty_assertions = "1.4.0"
# Added for API tests
tower = { version = "0.4", features = ["util"] }
http-body-util = "0.1"
html-escape = "0.2"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# cargo-dist configuration
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.28.0"
# CI backends to support
ci = "github"
# The installers to generate for each app
installers = ["shell", "powershell"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = [
  "aarch64-apple-darwin",
  "x86_64-apple-darwin",
  "x86_64-unknown-linux-gnu",
  "aarch64-unknown-linux-gnu",
  "x86_64-pc-windows-msvc",
]
# Publish jobs to run in CI
pr-run-mode = "plan"
# Whether to install an updater program
install-updater = false

# Fix Ubuntu 20.04 deprecation by specifying ubuntu-22.04 for all runners
[workspace.metadata.dist.github-custom-runners]
global = "ubuntu-22.04"

[workspace.metadata.dist.github-custom-runners.x86_64-unknown-linux-gnu]
runner = "ubuntu-22.04"

[workspace.metadata.dist.github-custom-runners.aarch64-unknown-linux-gnu]
runner = "ubuntu-22.04"
